--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
                         </ul>
                         <hr>
                         <p class="card-text"><a href="https://www.airbnb.com.au/rooms/1114245584139130363?check_in=2025-10-11&check_out=2025-10-14&guests=8&adults=6&s=67&unique_share_id=1c9b14dd-77bd-4638-b409-aa57445cb972" target="_blank">Airbnbのサイトを見る</a></p>
-                        <img src="images/accommodation_map.png" class="img-fluid rounded mt-3" alt="宿泊先マップ">
+                        <div class="map-container mt-3">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.83543450937!2d144.9837343153183!3d-37.81720997975181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad6428f3e3e1e3b%3A0x9d3d3b4f5e3e1e3b!2s60%20Stanley%20St%2C%20Richmond%20VIC%203121%2C%20Australia!5e0!3m2!1sen!2sjp!4v1627482953101!5m2!1sen!2sjp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        </div>
                     </div>
                 </div>
             </div>
