--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>メルボルンマラソン2025 日本チーム</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
