--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Melbourne Marathon 2025</a>
+            <a class="navbar-brand" href="index.html"><img src="images/favicon.png" alt="Favicon" style="height: 30px; margin-right: 10px;">Melbourne Marathon 2025</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
