旅程表の更新

--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr><td>10/10</td><td>金</td><td>各自日本発、機内泊</td></tr>
-                        <tr><td>10/11</td><td>土</td><td>メルボルン到着、RUNNERS EXPOにてゼッケン受取、宿泊先チェックイン、観光、前夜祭</td></tr>
+                        <tr><td>10/10</td><td>金</td><td>各自日本発、機内泊<br>小山内ファミリー 東京(成田)  JL773 18:40</td></tr>
+                        <tr><td>10/11</td><td>土</td><td>小山内ファミリー メルボルン着 JL773 6:45<br>メルボルン到着、RUNNERS EXPOにてゼッケン受取、宿泊先チェックイン、観光、前夜祭</td></tr>
                         <tr><td>10/12</td><td>日</td><td><strong>メルボルンマラソン出場・応援、打ち上げ</strong></td></tr>
                         <tr><td>10/13</td><td>月</td><td>ワイナリーツアー、動物園</td></tr>
                         <tr><td>10/14</td><td>火</td><td>マーケット、ショッピング、メルボルン発、帰国の途へ</td></tr>
-                        <tr><td>10/15</td><td>水</td><td>日本到着、小山内ファミリー帰国の途へ</td></tr>
-                        <tr><td>10/16</td><td>木</td><td>小山内ファミリー日本到着</td></tr>
+                        <tr><td>10/15</td><td>水</td><td>小山内ファミリー JL774 メルボルン8:25 → 東京16:20、JAL151 東京19:45 → 青森21:00<br>日本到着</td></tr>
+                        
                     </tbody>
                 </table>
             </div>
