ホームページのカードを宿泊とアクセスに分割

--- a/index.html
+++ b/index.html
@@ -50,44 +50,54 @@
         </div>
 
         <!-- Card Links -->
-        <div class="row g-4 mb-5">
-            <div class="col-md-6 col-lg-3">
+        <div class="row row-cols-1 row-cols-md-3 row-cols-lg-5 g-4 mb-5 justify-content-center">
+            <div class="col">
                 <div class="card h-100 text-center">
-                    <div class="card-body">
+                    <div class="card-body d-flex flex-column">
                         <i class="bi bi-people-fill fs-2 text-primary"></i>
                         <h5 class="card-title mt-3">参加者一覧</h5>
                         <p class="card-text">チームの仲間たちをチェック！</p>
-                        <a href="participants.html" class="btn btn-primary">一覧を見る</a>
+                        <a href="participants.html" class="btn btn-primary mt-auto">一覧を見る</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-3">
+            <div class="col">
                 <div class="card h-100 text-center">
-                    <div class="card-body">
+                    <div class="card-body d-flex flex-column">
                         <i class="bi bi-calendar-event fs-2 text-primary"></i>
                         <h5 class="card-title mt-3">旅程</h5>
                         <p class="card-text">大会までの全スケジュールを確認。</p>
-                        <a href="itinerary.html" class="btn btn-primary">旅程を見る</a>
+                        <a href="itinerary.html" class="btn btn-primary mt-auto">旅程を見る</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-3">
+            <div class="col">
                 <div class="card h-100 text-center">
-                    <div class="card-body">
+                    <div class="card-body d-flex flex-column">
                         <i class="bi bi-building fs-2 text-primary"></i>
-                        <h5 class="card-title mt-3">宿泊 & アクセス</h5>
-                        <p class="card-text">滞在先と交通手段の詳細はこちら。</p>
-                        <a href="accommodation.html" class="btn btn-primary">詳細を見る</a>
+                        <h5 class="card-title mt-3">宿泊情報</h5>
+                        <p class="card-text">滞在先の詳細を確認。</p>
+                        <a href="accommodation.html" class="btn btn-primary mt-auto">詳細を見る</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-6 col-lg-3">
+            <div class="col">
                 <div class="card h-100 text-center">
-                    <div class="card-body">
+                    <div class="card-body d-flex flex-column">
+                        <i class="bi bi-geo-alt-fill fs-2 text-primary"></i>
+                        <h5 class="card-title mt-3">アクセス情報</h5>
+                        <p class="card-text">空港や会場への交通手段。</p>
+                        <a href="access.html" class="btn btn-primary mt-auto">詳細を見る</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100 text-center">
+                    <div class="card-body d-flex flex-column">
                         <i class="bi bi-images fs-2 text-primary"></i>
                         <h5 class="card-title mt-3">ギャラリー</h5>
                         <p class="card-text">思い出の写真を共有・閲覧。</p>
-                        <a href="gallery.html" class="btn btn-primary">写真を見る</a>
+                        <a href="gallery.html" class="btn btn-primary mt-auto">写真を見る</a>
                     </div>
                 </div>
             </div>
