feat: Update itinerary, accommodation, and news
Add flight details and lecture information to the itinerary page.

Add a new Airbnb property and update team names on the accommodation page.

Add the lecture poster image.

Update the latest news on the index and news pages.

--- a/accommodation.html
+++ b/accommodation.html
@@ -43,7 +43,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <h5 class="card-title">宿泊先: Airbnb</h5>
+                        <h5 class="card-title">宿泊先: Airbnb（他者貢献チーム）</h5>
                         <p class="card-text"><strong>予約期間:</strong> 2025年10月11日(土) 〜 10月14日(火)</p>
                         <p class="card-text"><strong>人数:</strong> 8名</p>
                         <p class="card-text"><strong>チェックイン:</strong> 10月11日(土) 14pm</p>
@@ -67,6 +67,25 @@
                         <p class="card-text"><a href="https://www.airbnb.com.au/rooms/1114245584139130363?check_in=2025-10-11&check_out=2025-10-14&guests=8&adults=6&s=67&unique_share_id=1c9b14dd-77bd-4638-b409-aa57445cb972" target="_blank">Airbnbのサイトを見る</a></p>
                         <div class="map-container mt-3">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.83543450937!2d144.9837343153183!3d-37.81720997975181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad6428f3e3e1e3b%3A0x9d3d3b4f5e3e1e3b!2s60%20Stanley%20St%2C%20Richmond%20VIC%203121%2C%20Australia!5e0!3m2!1sen!2sjp!4v1627482953101!5m2!1sen!2sjp" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                        </div>
+                    </div>
+                </div>
+                <div id="new-airbnb-info" class="card mt-4">
+                    <div class="card-body">
+                        <h5 class="card-title">宿泊先: Airbnb（オサナイファミリー）</h5>
+                        <p class="card-text"><strong>予約期間:</strong> 2025年10月11日(土) 〜 10月15日(水)</p>
+                        <p class="card-text"><strong>人数:</strong> 4名</p>
+                        <p class="card-text"><strong>チェックイン:</strong> 10月11日(土) 14:00</p>
+                        <p class="card-text"><strong>チェックアウト:</strong> 10月15日(水) 10:00</p>
+                        <hr>
+                        <h6 class="card-subtitle mb-2 text-muted">物件概要</h6>
+                        <p class="card-text">
+                            メルボルンのスポットライトを浴びながら、芸術、音楽、スポーツ文化を満喫しましょう。ロッド・ラバー・アリーナからの音楽や「G」からの強烈な轟音を聴きながら、ロックスター気分を味わってください。このアパートは北向きで、キングレイク山脈の静けさを楽しみ、熱気球が通り過ぎるのを見て、冬の太陽を浴びることができる完璧なロケーションにあります。メルボルンで最も豊かな場所にあり、CBDの入り口にあり、100軒以上のレストラン/バーから1 km以内です。
+                        </p>
+                        <hr>
+                        <p class="card-text"><a href="https://www.airbnb.com/l/0M0Vl0Zp" target="_blank">Airbnbのサイトを見る</a></p>
+                        <div class="map-container mt-3">
+                            <iframe src="https://maps.google.com/maps?q=166%20Wellington%20Pde%2C%20East%20Melbourne&t=&z=15&ie=UTF8&iwloc=&output=embed" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                         </div>
                     </div>
                 </div>
