--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@
                 <div class="list-group">
                     <a href="news.html" class="list-group-item list-group-item-action">
                         <div class="d-flex w-100 justify-content-between">
+                            <h6 class="mb-1">大規模更新：旅程と宿泊情報を更新</h6>
+                            <small>2025/08/28</small>
+                        </div>
+                        <p class="mb-1">旅程にチームのフライト情報や後藤健太郎講演会の詳細を追加し、宿泊情報に新しい物件を追加・整理しました。</p>
+                    </a>
+                    <a href="news.html" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
                             <h6 class="mb-1">ウェブサイトをリニューアル</h6>
                             <small>2025/07/18</small>
                         </div>
