--- a/itinerary.html
+++ b/itinerary.html
@@ -42,14 +42,30 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr><td>10/10</td><td>金</td><td>各自日本発、機内泊<br>小山内ファミリー 東京(成田)  JL773 18:40</td></tr>
-                        <tr><td>10/11</td><td>土</td><td>小山内ファミリー メルボルン着 JL773 6:45<br>メルボルン到着、RUNNERS EXPOにてゼッケン受取、宿泊先チェックイン、観光、前夜祭</td></tr>
-                        <tr><td>10/12</td><td>日</td><td><strong>メルボルンマラソン出場・応援、打ち上げ</strong></td></tr>
+                        <tr><td>10/10</td><td>金</td><td>他者貢献チーム SQ655 福岡 10:00発 - チャンギ 15:00着, SQ227 チャンギ 22:10発<br>小山内ファミリー 東京(成田)  JL773 18:40</td></tr>
+                        <tr><td>10/11</td><td>土</td><td>小山内ファミリー メルボルン着 JL773 6:45<br>他者貢献チーム SQ227 メルボルン 8:25着<br>メルボルン到着、RUNNERS EXPOにてゼッケン受取、宿泊先チェックイン、観光、前夜祭</td></tr>
+                        <tr><td>10/12</td><td>日</td><td><strong>メルボルンマラソン出場・応援<br>後藤健太郎講演会・打ち上げ</strong></td></tr>
                         <tr><td>10/13</td><td>月</td><td>ワイナリーツアー、動物園</td></tr>
-                        <tr><td>10/14</td><td>火</td><td>マーケット、ショッピング、メルボルン発、帰国の途へ</td></tr>
-                        <tr><td>10/15</td><td>水</td><td>小山内ファミリー JL774 メルボルン8:25 → 東京16:20、JAL151 東京19:45 → 青森21:00<br>日本到着</td></tr>
+                        <tr><td>10/14</td><td>火</td><td>マーケット、ショッピング、メルボルン発、帰国の途へ<br>他者貢献チーム SQ208 メルボルン 19:15発</td></tr>
+                        <tr><td>10/15</td><td>水</td><td>他者貢献チーム SQ208 チャンギ 00:05着、SQ656 チャンギ 01:20発 - 福岡 08:20着<br>小山内ファミリー JL774 メルボルン8:25 → 東京16:20、JAL151 東京19:45 → 青森21:00<br>日本到着</td></tr>
                     </tbody>
                 </table>
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-12">
+                <h2>後藤健太郎講演会 詳細</h2>
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Corner Hotel - Legends Lounge</h5>
+                        <p class="card-text">
+                            <strong>時間:</strong> 開場 17:30 / 開演 18:00<br>
+                            <strong>会場URL:</strong> <a href="https://www.tagvenue.com/au/rooms/melbourne/85311/corner-hotel/legends-lounge" target="_blank">会場の詳細を見る</a>
+                        </p>
+                        <h6 class="mt-4">ポスター</h6>
+                                                <img src="images/lecture_poster.png" class="img-fluid" alt="後藤健太郎講演会ポスター">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
