feat: Update itinerary with event details and photos

--- a/itinerary.html
+++ b/itinerary.html
@@ -43,9 +43,9 @@
                     </thead>
                     <tbody>
                         <tr><td>10/10</td><td>金</td><td>他者貢献チーム SQ655 福岡 10:00発 - チャンギ 15:00着, SQ227 チャンギ 22:10発<br>小山内ファミリー 東京(成田)  JL773 18:40</td></tr>
-                        <tr><td>10/11</td><td>土</td><td>小山内ファミリー メルボルン着 JL773 6:45<br>他者貢献チーム SQ227 メルボルン 8:25着<br>メルボルン到着、RUNNERS EXPOにてゼッケン受取、宿泊先チェックイン、観光、前夜祭</td></tr>
+                        <tr><td>10/11</td><td>土</td><td>小山内ファミリー メルボルン着 JL773 6:45<br>他者貢献チーム SQ227 メルボルン 8:25着<br>メルボルン到着、RUNNERS EXPOにてゼッケン受取、宿泊先チェックイン、観光、前夜祭（Richmond Oysters)</td></tr>
                         <tr><td>10/12</td><td>日</td><td><strong>メルボルンマラソン出場・応援<br>後藤健太郎講演会・打ち上げ</strong></td></tr>
-                        <tr><td>10/13</td><td>月</td><td>ワイナリーツアー、動物園</td></tr>
+                        <tr><td>10/13</td><td>月</td><td>Yarra River蒸気船貸し切りクルーズ 13:15-14:15</td></tr>
                         <tr><td>10/14</td><td>火</td><td>マーケット、ショッピング、メルボルン発、帰国の途へ<br>他者貢献チーム SQ208 メルボルン 19:15発</td></tr>
                         <tr><td>10/15</td><td>水</td><td>他者貢献チーム SQ208 チャンギ 00:05着、SQ656 チャンギ 01:20発 - 福岡 08:20着<br>小山内ファミリー JL774 メルボルン8:25 → 東京16:20、JAL151 東京19:45 → 青森21:00<br>日本到着</td></tr>
                     </tbody>
@@ -54,16 +54,58 @@
         </div>
         <div class="row mt-5">
             <div class="col-12">
-                <h2>後藤健太郎講演会 詳細</h2>
-                <div class="card">
+                <h2>イベント詳細</h2>
+                <div class="card mb-4">
+                    <div class="row g-0">
+                        <div class="col-4">
+                            <img src="images/richmond_oysters_1.jpg" class="img-fluid" alt="Richmond Oysters 1">
+                        </div>
+                        <div class="col-4">
+                            <img src="images/richmond_oysters_2.jpg" class="img-fluid" alt="Richmond Oysters 2">
+                        </div>
+                        <div class="col-4">
+                            <img src="images/richmond_oysters_3.jpg" class="img-fluid" alt="Richmond Oysters 3">
+                        </div>
+                    </div>
                     <div class="card-body">
-                        <h5 class="card-title">Corner Hotel - Legends Lounge</h5>
+                        <h5 class="card-title">10/11(土) 前夜祭</h5>
                         <p class="card-text">
+                            <strong>会場:</strong> Richmond Oysters<br>
+                            <strong>時間:</strong> 18時頃<br>
+                            <strong>URL:</strong> <a href="https://www.richmondoysters.com.au/restaurant/" target="_blank">https://www.richmondoysters.com.au/restaurant/</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h5 class="card-title">10/12(日) 後藤健太郎講演会</h5>
+                        <p class="card-text">
+                            <strong>会場:</strong> Corner Hotel - Legends Lounge<br>
                             <strong>時間:</strong> 開場 17:30 / 開演 18:00<br>
-                            <strong>会場URL:</strong> <a href="https://www.tagvenue.com/au/rooms/melbourne/85311/corner-hotel/legends-lounge" target="_blank">会場の詳細を見る</a>
+                            <strong>URL:</strong> <a href="https://www.tagvenue.com/au/rooms/melbourne/85311/corner-hotel/legends-lounge" target="_blank">会場の詳細を見る</a>
                         </p>
                         <h6 class="mt-4">ポスター</h6>
-                                                <img src="images/lecture_poster.png" class="img-fluid" alt="後藤健太郎講演会ポスター">
+                        <img src="images/lecture_poster.png" class="img-fluid w-50" alt="後藤健太郎講演会ポスター">
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="row g-0">
+                        <div class="col-4">
+                            <img src="images/yarra_cruise_1.jpg" class="img-fluid" alt="Yarra River Cruise 1">
+                        </div>
+                        <div class="col-4">
+                            <img src="images/yarra_cruise_2.jpg" class="img-fluid" alt="Yarra River Cruise 2">
+                        </div>
+                        <div class="col-4">
+                            <img src="images/yarra_cruise_3.png" class="img-fluid" alt="Yarra River Cruise 3">
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h5 class="card-title">10/13(月) Yarra River蒸気船貸し切りクルーズ</h5>
+                        <p class="card-text">
+                            <strong>時間:</strong> 13:15-14:15<br>
+                            <strong>URL:</strong> <a href="https://yarrariver.melbourne/listings/146/classic-steamboat-cruises" target="_blank">https://yarrariver.melbourne/listings/146/classic-steamboat-cruises</a>
+                        </p>
                     </div>
                 </div>
             </div>
