--- a/news.html
+++ b/news.html
@@ -35,6 +35,7 @@
             <div class="col-12">
                 <h2><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16"><path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/><path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.064.293.006.399.287.47l.45.083.082.38-2.29-.287-.082-.38.45-.083c.294-.07.352-.176.288-.469l.738-3.468c.064-.293-.006-.399-.287-.47l-.45-.083-.082-.38zm.22-2.45a.93.93 0 1 0 0-1.86.93.93 0 0 0 0 1.86z"/></svg> 最新情報</h2>
                 <ul class="list-group">
+                    <li class="list-group-item">2025/09/27: 旅程ページを更新。前夜祭とYarra Riverクルーズの詳細・写真を追加しました。その他軽微な修正を行いました。</li>
                     <li class="list-group-item">2025/08/28: 大規模更新：旅程と宿泊情報を更新。旅程にチームのフライト情報や後藤健太郎講演会の詳細を追加し、宿泊情報に新しい物件を追加・整理しました。</li>
                     <li class="list-group-item">2025/07/18: ウェブサイトをリニューアルしました。サイト構成を刷新し、各情報ページを作成しました。</li>
                     <li class="list-group-item">2025/07/18: 旅程を更新しました。小山内ファミリーのフライト情報を追加しました。</li>
