--- a/index.html
+++ b/index.html
@@ -110,6 +110,13 @@
                 <div class="list-group">
                     <a href="news.html" class="list-group-item list-group-item-action">
                         <div class="d-flex w-100 justify-content-between">
+                            <h6 class="mb-1">旅程ページを更新</h6>
+                            <small>2025/09/27</small>
+                        </div>
+                        <p class="mb-1">前夜祭とYarra Riverクルーズの詳細・写真を追加しました。その他軽微な修正を行いました。</p>
+                    </a>
+                    <a href="news.html" class="list-group-item list-group-item-action">
+                        <div class="d-flex w-100 justify-content-between">
                             <h6 class="mb-1">大規模更新：旅程と宿泊情報を更新</h6>
                             <small>2025/08/28</small>
                         </div>
